--- a/src/main/resources/static/css/game_style.css
+++ b/src/main/resources/static/css/game_style.css
@@ -6,10 +6,12 @@
 }
 
 html {
+    font-family: 'Anton', sans-serif;
     margin: 0;
 }
 
 body {
+    font-family: 'Anton', sans-serif;
     margin: 0;
     width: 100vw;
     height: 100vh;
@@ -20,6 +22,7 @@ body {
 }
 
 .wrapper {
+    font-family: 'Anton', sans-serif;
     position: relative;
     border: 1px solid #d1d1d0a8;
     padding: 20px;
@@ -29,7 +32,7 @@ body {
 
 #canvas1 {
     border: 4px solid black;
-    background: no-repeat url("../images/board.png");
+    background: no-repeat url("../images/dark_table.jpg");
 }
 
 .btn {
@@ -76,6 +79,7 @@ body {
 }
 
 #rangeValue {
+    font-family: 'Anton', sans-serif;
     width: 600px;
     border: none;
     margin: 0;
@@ -93,6 +97,7 @@ body {
 }
 
 .range {
+    font-family: 'Anton', sans-serif;
     width: 600px;
     height: 15px;
     -webkit-appearance: none;
@@ -155,6 +160,7 @@ body {
 }
 
 .player-place {
+    font-family: 'Anton', sans-serif;
     height: 40px;
     width: 180px;
     color: #70ffffaf;
@@ -170,6 +176,7 @@ body {
 }
 
 .player-rate {
+    font-family: 'Anton', sans-serif;
     top: 30px;
     left: 20px;
     height: 32px;
@@ -187,10 +194,12 @@ body {
 }
 
 .player-places {
+    font-family: 'Anton', sans-serif;
     position: absolute;
 }
 
 .button-player {
+    font-family: 'Anton', sans-serif;
     height: 130px;
     width: 130px;
     color: #70ffffaf;
@@ -208,6 +217,7 @@ body {
 }
 
 .room-timer {
+    font-family: 'Anton', sans-serif;
     position: relative;
     display: inline-block;
     font-size: 40px;
